# circhart

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  config.py  main.py  pyproject.toml  style.qss  window.py
.github/workflows/: build.yml
assets/: index.html  style.css
bak/: style.qss  window.py
docs/source/: circos.rst  conf.py  import.rst  index.rst  install.rst  overview.rst  prepare.rst  project.rst  snail.rst  usage.rst
package/: build.spec  build_linux_installer.sh  build_mac_installer.sh  build_win_installer.iss  dmg_bg.ai  fix_circos_font.py
src/: backend.py  config.py  confile.py  dialogs.py  main.py  models.py  params.py  plots.yml  process.py  requirements.txt  resources.py  resources.qrc  style.qss  tables.py  tags.py  test.py  utils.py  widgets.py  window.py  workers.py
src/icons/: alogo.icns  logo.icns
