[project]
name = "circhart"
version = "0.1.0"
description = "A user-friendly graphical tool for generating circle genome plot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apsw>=3.51.1.0",
    "pyfastx>=2.3.0",
    "pygros>=0.2.0",
    "pyside6-essentials>=6.10.1",
    "pyyaml>=6.0.3",
    "pyinstaller>=6.18.0",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
